src/test/deca/syntax/invalid/decl_missing_equals.deca
// Description :
// Signe '=' manquant entre identifiant et expression
//
// Resultats :
// Erreur syntaxique
// Ligne 4 : no viable alternative
// Regle : decl_var : ident ('=' expr)?

{
    int x  5 ;
}